vdsm: Coverage deployment and data collection
Adding conditional inclusion of 'setup_host_vdsm_coverage.sh'
deployment script along with coverage data collection based on the
presence of '--coverage' switch.

Change-Id: I40dcbc72a60fb1427a84a603852fcd52d2deb925
Signed-off-by: Marcin Sobczyk <msobczyk@redhat.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -90,6 +90,15 @@ domains:
         {% if loop.first and install_ovirt_host|default(false) -%}
         - $LAGO_INITFILE_PATH/deploy-scripts/setup_1st_host_el7.sh
         {%- endif %}
+        {% if env.coverage == "true" -%}
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_host_vdsm_coverage.sh
+        {%- endif %}
+    artifacts:
+      - /etc/resolv.conf
+      - /var/log
+      {% if env.coverage == "true" -%}
+      - /var/lib/vdsm/coverage
+      {%- endif %}
 {%- endfor %}
 nets:
   lago-{{ env.suite_name }}-net-management:
