--- a/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
+++ b/common/init-configs/1_hosted_engine_4.1_2_centos7_hosts.yml
@@ -89,6 +89,13 @@ domains:
         {% else -%}
         - $LAGO_INITFILE_PATH/deploy-scripts/install_he_4_additional_host.sh
         {%- endif %}
+        {% if env.coverage == "true" -%}
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_host_vdsm_coverage.sh
+        {%- endif %}
+    {% if env.coverage == "true" -%}
+    artifacts:
+      - /var/lib/vdsm/coverage
+    {%- endif %}
 {%- endfor %}
 
 nets:
