master: drop whitelisting from centos-qemu-ev-testing-el7
3rd patch in the series, for simplifying whitelisting
for small repos.

Change-Id: I637ac790da2570d66ec965e07a600d27f15728e8
Signed-off-by: Eyal Edri <eedri@redhat.com>

--- a/common/yum-repos/ovirt-master.repo.in
+++ b/common/yum-repos/ovirt-master.repo.in
@@ -90,6 +90,7 @@ exclude = ansible
 name = CentOS-7 - QEMU EV - Testing
 baseurl = http://buildlogs.centos.org/centos/7/virt/x86_64/kvm-common/
 gpgcheck = 0
+ost_skip_injection = True
 enabled = 1
 
 [centos-opstools-testing-el7]
