ovirt-4.2: fixing reposync files
we are failing tests due to missing packages and we can't merge the
change from the auto tool as its moving ansible-doc package from epel
to another repo.

* added exclude for ansible-doc on different repos so it would not
change location for the package
* ran the tool to create new reposync files for basic and release
repos

Change-Id: Id4411296f0acdee8bc51288a6d5806f93f7ac386
Signed-off-by: Dafna Ron <dron@redhat.com>

--- a/common/yum-repos/ovirt-4.2.repo.in
+++ b/common/yum-repos/ovirt-4.2.repo.in
@@ -62,6 +62,7 @@ gpgcheck = 0
 enabled = 1
 exclude = novnc
         ansible
+	ansible-doc
         python2-ecdsa
 
 [centos-ovirt-4.2-el7]
@@ -70,6 +71,7 @@ baseurl = http://mirror.centos.org/centos/7/virt/x86_64/ovirt-4.2/
 gpgcheck = 0
 enabled = 1
 exclude = ansible
+	  ansible-doc
 
 [centos-qemu-ev-release-el7]
 name = CentOS-7 - QEMU EV
