Move master to centos 7.6 official
Change-Id: I3f5bcc7b8c81d48936a83b6d3d2a8163acd55bb9
Signed-off-by: Galit Rosenthal <grosenth@redhat.com>

--- a/he-basic-iscsi-suite-master/vars/main.yml
+++ b/he-basic-iscsi-suite-master/vars/main.yml
@@ -1,6 +1,6 @@
 templates:
-  storage: el7.6-base-beta
-  host: el7.6-base-beta
+  storage: el7.6-base
+  host: el7.6-base
 hostCount: 2
 system_requirements:
   disk_space_gb: 80
