he: remove vintage flow on master
On master we are going to remove HE vintage flow
and --ansible/--noansible CLI options
to trigger it.
Fixing here as well.

Change-Id: Icf7586d04e95cf833dc5e115ede2318f78408c9a
Signed-off-by: Simone Tiraboschi <stirabos@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -19,7 +19,7 @@ stage:
         - hc-basic_suite_4.2
         - hc-basic_suite_master
         - he-basic-ansible_suite_4.2
-        - he-basic-ansible_suite_master
+        - he-basic_suite_master
         - he-node-ng_suite_master
         - he-node-ng_suite_4.2
         - network_suite_4.2
