he-basic-ipv6-suite-master: Fork new suite for pure IPv6 deployment
Fork new suite without any IPv6 specific changes to
existing code.

Change-Id: I0bff6027b21a07a5a2cc00c0cec51b4c904f5845
Signed-off-by: Ales Musil <amusil@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -24,6 +24,7 @@ stage:
             runtime-requirements:
               support-nesting-level: 2
         - he-basic-ansible_suite_4.2
+        - he-basic-ipv6_suite_master
         - he-basic_suite_master
         - he-basic-iscsi_suite_master
         - he-node-ng_suite_master
