Increase the job timeout to 180m
On some machines 100m timeout isn't enough for the HE suites.

Change-Id: I16a837c0fc59c2f0cfb1d24a62a9e6b5db3c515d
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -9,6 +9,7 @@ stage:
       script:
         fromfile: 'automation/{{ stage }}.{{ substage }}.sh'
   - check-patch:
+      timeout: 180m
       substage:
         - dr_suite_master
         - ansible_suite_master
