--- a/basic-suite-master-vagrant/vagrant_hosts.yml
+++ b/basic-suite-master-vagrant/vagrant_hosts.yml
@@ -5,29 +5,31 @@
   user: root
   provider:
   memory: 1024
-  deploy-script: "deploy-scripts/setup_host_el7.sh"
-  disks:
-    - size: "1G"
-      type: "raw"
-      allow_existing: "false"
-      bus: "scsi"
-      device: "sdc"
-    - size: "1G"
-      type: "raw"
-      allow_existing: "false"
+  deploy-script:
+    - script: "deploy-scripts/setup_host_el7.sh"
+    - script: "deploy-scripts/setup_1st_host_el7.sh"
+      arguments:
+        - first_host: 1
+    - script: "deploy-scripts/add_local_repo_no_ext_access.sh"
+      arguments:
+        - first_host: 0
 - type: "engine"
   box: "centos/7"
   box_version: "1811.02"
   hostCount: 1
   memory: 1024
   user: root
-  deploy-script: "deploy-scripts/setup_engine.sh"
+  deploy-script:
+    - script: "deploy-scripts/setup_engine.sh"
+    - script: "deploy-scripts/setup_storage.sh"
   disks:
-    - size: "1G"
+    - size: "101G"
+      type: "raw"
+      allow_existing: "false"
+      bus: "scsi"
+      device: "sda"
+    - size: "105G"
       type: "raw"
       allow_existing: "false"
       bus: "scsi"
       device: "sdc"
-    - size: "1G"
-      type: "raw"
-      allow_existing: "false"
