network-suite: ovirtlib: rpm
Let us build an RPM for ovirtlib, so scripts outside ovirt-system-tests
can use it. I'd like to keep the sources of ovirtlib here, where they
have the best test suite.

Change-Id: I31ded2a976edf60ad8f7bca457aee203414f5bc9
Signed-off-by: Dan Kenigsberg <danken@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -72,12 +72,22 @@ stage:
               filechanged: ['run_suite.sh', 'automation/suite.sh']
             script:
               fromfile: 'automation/basic_suite_master.sh'
+        - build_ovirtlib:
+            runif:
+              filechanged:
+                - 'automation/build-artifacts*'
+                - 'network-suite-master/ovirtlib*'
+            script:
+              fromfile: 'automation/build-artifacts.sh'
       runif:
         filechanged:
           - '{{ substage|replace("_", "[_-]") }}*'
           - 'automation/{{ substage|replace("_", "[_-]") }}*'
       script:
         fromfile: 'automation/{{ substage }}.sh'
+  - build-artifacts:
+      script:
+        fromfile: 'automation/build-artifacts.sh'
 runtime-requirements:
   support-nesting-level: 2
   isolation_level: container
