he: skip memory checks on HE suites on master
https://gerrit.ovirt.org/96529/ introduces a
new flag to skip mem size checks.
Let's consume it since we are running HE
suites with less than 4096 MB for the
engine VM.

Change-Id: Ice6a2ae22e40dff20cd61630f1d5f66b9b203313
Signed-off-by: Simone Tiraboschi <stirabos@redhat.com>

--- a/hc-basic-suite-master/hc-answers.conf.in
+++ b/hc-basic-suite-master/hc-answers.conf.in
@@ -17,6 +17,7 @@ OVEHOSTED_STORAGE/domainType=str:glusterfs
 OVEHOSTED_STORAGE/storageDomainConnection=str:@HOST1-IP@:/engine
 #OVEHOSTED_STORAGE/mntOptions=str:backup-volfile-servers=@HOST2-IP@:@HOST3-IP@
 OVEHOSTED_VM/vmMemSizeMB=int:3171
+OVEHOSTED_CORE/memCheckRequirements=bool:False
 OVEHOSTED_VM/vmMACAddr=str:00:16:3e:24:d3:63
 OVEHOSTED_VM/vmVCpus=str:2
 OVEHOSTED_VM/ovfArchive=str:@OVAIMAGE@
