--- a/common/answer-files/he_master.conf.in
+++ b/common/answer-files/he_master.conf.in
@@ -16,6 +16,7 @@ OVEHOSTED_STORAGE/domainType=str:nfs3
 OVEHOSTED_STORAGE/storageDomainName=str:hosted_storage
 OVEHOSTED_STORAGE/storageDomainConnection=str:@STORAGEHOSTNAME@:/exports/nfs_he
 OVEHOSTED_VM/vmMemSizeMB=int:3171
+OVEHOSTED_CORE/memCheckRequirements=bool:False
 OVEHOSTED_VM/vmMACAddr=str:54:52:c0:a8:c8:63
 OVEHOSTED_VM/vmVCpus=str:2
 OVEHOSTED_VM/cloudinitInstanceDomainName=str:@DOMAIN@
