vagrant: Fix boolean values in vagrant_hosts
allow_existing is a boolean value, not a string.
The string "false" is eveluated to true when casting it to boolean.

Change-Id: Ieb8aaed9ad7f4c16cc16ce3c63331f0bbdfe26e2
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/basic-suite-master-vagrant/vagrant_hosts.yml
+++ b/basic-suite-master-vagrant/vagrant_hosts.yml
@@ -25,11 +25,11 @@
   disks:
     - size: "101G"
       type: "raw"
-      allow_existing: "false"
+      allow_existing: false
       bus: "scsi"
       device: "sda"
     - size: "105G"
       type: "raw"
-      allow_existing: "false"
+      allow_existing: false
       bus: "scsi"
       device: "sdc"
