he-suites: Preparation for pure IPv6 suite
Add configuration options for interface and network prefix.

Add new network to lago which is ignored in normal suite
and will be used for pure IPv6 suite.

Change-Id: Id14577f7b5dabce98bf4a98a20cd9818d8ea09c0
Signed-off-by: Ales Musil <amusil@redhat.com>

--- a/common/answer-files/he_master.conf.in
+++ b/common/answer-files/he_master.conf.in
@@ -6,7 +6,7 @@ OVEHOSTED_CORE/deployProceed=bool:True
 OVEHOSTED_CORE/confirmSettings=bool:True
 OVEHOSTED_CORE/skipTTYCheck=bool:True
 OVEHOSTED_NETWORK/fqdn=str:@HOSTEDENGINE@.@DOMAIN@
-OVEHOSTED_NETWORK/bridgeIf=str:eth0
+OVEHOSTED_NETWORK/bridgeIf=str:@INTERFACE@
 OVEHOSTED_NETWORK/firewallManager=str:iptables
 OVEHOSTED_NETWORK/gateway=str:@GW@
 OVEHOSTED_ENGINE/adminPassword=str:@ENGINEPASS@
@@ -21,7 +21,7 @@ OVEHOSTED_VM/vmMACAddr=str:54:52:c0:a8:c8:63
 OVEHOSTED_VM/vmVCpus=str:2
 OVEHOSTED_VM/cloudinitInstanceDomainName=str:@DOMAIN@
 OVEHOSTED_VM/cloudinitInstanceHostName=str:@HOSTEDENGINE@.@DOMAIN@
-OVEHOSTED_VM/cloudinitVMStaticCIDR=str:@ADDR@/24
+OVEHOSTED_VM/cloudinitVMStaticCIDR=str:@ADDR@/@PREFIX@
 OVEHOSTED_VM/cloudinitRootPwd=str:@VMPASS@
 OVEHOSTED_VM/cloudinitVMETCHOSTS=bool:True
 OVEHOSTED_VM/cloudinitVMDNS=str:@GW@
