--- a/stdci.yaml
+++ b/stdci.yaml
@@ -30,6 +30,7 @@ stage:
         - upgrade-from-release_suite_4.2
         - upgrade-from-prevrelease_suite_4.2
         - upgrade-from-release_suite_master
+        - basic-vagrant_suite_master
         - test-ost-container:
             runif:
               filechanged: ['automation/test-ost-container*', 'run-ost-container.sh']
