vagrant: Configure the cpu of the Vagrant hosts
Change-Id: I3e35b4a604ab0c57986b638d5670faa615ccd32d
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/basic-vagrant-suite-master/Vagrantfile
+++ b/basic-vagrant-suite-master/Vagrantfile
@@ -168,6 +168,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         if $vagrant_pool then
             p.storage_pool_name = $vagrant_pool
         end
+
+        # TODO: Take this info from the config and make it domain specific
+        p.cpus = 2
+        p.nested = true
+        p.cpu_mode = "host-passthrough"
         #p.default_prefix = suite_name
     end
 
