vagrant: Improve automation triggering
Trigger the suite if there was a change in ost_utils or vagrant_suite.sh

Change-Id: I6120e7acad18ec2afedf4f1c058b1de708214bcb
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -30,7 +30,13 @@ stage:
         - upgrade-from-release_suite_4.2
         - upgrade-from-prevrelease_suite_4.2
         - upgrade-from-release_suite_master
-        - basic-vagrant_suite_master
+        - basic-vagrant_suite_master:
+            runif:
+              filechanged:
+                - '{{ substage|replace("_", "[_-]") }}*'
+                - 'automation/{{ substage|replace("_", "[_-]") }}*'
+                - 'automation/vagrant_suite.sh'
+                - 'ost_utils/*'
         - test-ost-container:
             runif:
               filechanged: ['automation/test-ost-container*', 'run-ost-container.sh']
