automation: Move OST to run on STDCI containers
This change will increase the number of suites the can run in parallel
on the CI.

For now, not moving HC* suite, since the Ansible playbook it uses hangs
when running on STDCI containers (we should investigate why).

Change-Id: I7413cafbe5fe5a9e5ec2b0717975a4ce92918134
Signed-off-by: gbenhaim <galbh2@gmail.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -17,8 +17,12 @@ stage:
         - basic_suite_master
         - compat-4.1_suite_master
         - compat-4.2_suite_master
-        - hc-basic_suite_4.2
-        - hc-basic_suite_master
+        - hc-basic_suite_4.2:
+            runtime-requirements:
+              support-nesting-level: 2
+        - hc-basic_suite_master:
+            runtime-requirements:
+              support-nesting-level: 2
         - he-basic-ansible_suite_4.2
         - he-basic_suite_master
         - he-basic-iscsi_suite_master
@@ -63,3 +67,4 @@ stage:
         fromfile: 'automation/{{ substage }}.sh'
 runtime-requirements:
   support-nesting-level: 2
+  isolation_level: container
