--- a/stdci.yaml
+++ b/stdci.yaml
@@ -33,6 +33,7 @@ stage:
         - he-node-ng_suite_master
         - he-node-ng_suite_4.2
         - network_suite_4.2
+        - network_suite_4.3
         - network_suite_master
         - performance_suite_master
         - upgrade-from-release_suite_4.2
