--- a/stdci.yaml
+++ b/stdci.yaml
@@ -37,6 +37,7 @@ stage:
         - network_suite_master
         - performance_suite_master
         - upgrade-from-release_suite_4.2
+        - upgrade-from-release_suite_4.3
         - upgrade-from-prevrelease_suite_4.2
         - upgrade-from-release_suite_master
         - basic-vagrant_suite_master:
