Enable he-basic-role-remote_suite_master
Change-Id: I793ef377f2289e2431b6aef3ff969d391dd72af1
Signed-off-by: Simone Tiraboschi <stirabos@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -27,6 +27,7 @@ stage:
         - he-basic-ipv6_suite_master
         - he-basic_suite_master
         - he-basic-iscsi_suite_master
+        - he-basic-role-remote_suite_master
         - he-node-ng_suite_master
         - he-node-ng_suite_4.2
         - network_suite_4.2
