hc-suite: Changes as per gluster-ansible update
Changed below:
- location of playbook
- skipped check of /var/log size
- changed inventory variable

Change-Id: Ibf775eab2e21173fe46d1bc5daf5fdb7515e5d46
Signed-off-by: Sahina Bose <sabose@redhat.com>

--- a/hc-basic-suite-master/ohc_gluster_inventory.yml.in
+++ b/hc-basic-suite-master/ohc_gluster_inventory.yml.in
@@ -1,4 +1,4 @@
-hc-nodes:
+hc_nodes:
   hosts:
     # Host1
     @HOST0@:
@@ -177,6 +177,7 @@ hc-nodes:
     gluster_infra_disktype: RAID6
     gluster_infra_diskcount: 12
     gluster_infra_stripe_unit_size: 128
+    gluster_features_force_varlogsizecheck: false
 
 ## Auto add hosts vars
 
