--- a/common/yum-repos/ovirt-4.3.repo.in
+++ b/common/yum-repos/ovirt-4.3.repo.in
@@ -19,7 +19,9 @@ exclude = ovirt-guest-agent-common
 
 [ovirt-4.3-snapshot-static-el7]
 name = oVirt 4.3 Nightly Statics
-baseurl = http://resources.ovirt.org/pub/ovirt-4.3-snapshot-static/rpm/el7/
+# temporary not in use
+# baseurl = http://resources.ovirt.org/pub/ovirt-4.3-snapshot-static/rpm/el7/
+baseurl = http://resources.ovirt.org/pub/ovirt-4.3/rpm/el7/
 enabled = 1
 max_connections = 10
 ost_skip_injection = True
