--- a/stdci.yaml
+++ b/stdci.yaml
@@ -41,6 +41,7 @@ stage:
         - upgrade-from-release_suite_4.2
         - upgrade-from-release_suite_4.3
         - upgrade-from-prevrelease_suite_4.2
+        - upgrade-from-prevrelease_suite_4.3
         - upgrade-from-release_suite_master
         - basic-vagrant_suite_master:
             runif:
