Add poll upstream for CQ repo files
Automate the creation of these repofiles
ovirt-4.2-cq.repo
ovirt-4.3-cq.repo
ovirt-master-cq.repo

Change-Id: I8f846a5e4a143a71d7f899f855772b0c3a2255a2
Signed-off-by: Galit <grosenth@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -3,8 +3,11 @@ stage:
   - poll-upstream-sources:
       substage:
         - ovirt-master
+        - ovirt-master-cq
         - ovirt-4.3
+        - ovirt-4.3-cq
         - ovirt-4.2
+        - ovirt-4.2-cq
         - ovirt-4.2-release
         - ovirt-4.3-release
         - ovirt-4.1-stable
