Add a he-node-ng suite with OpenSCAP support
The he-node-ng-ssg suite installs ovirt-node-ng with ${SSG_PROFILE}
applied on it, and sets "Apply OpenSCAP" to yes during hosted-engine
deployment

Change-Id: I0e66a8c1b6e738a151066387871f63e06cac48dd
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -35,6 +35,7 @@ stage:
         - he-basic-role-remote_suite_master
         - he-node-ng_suite_4.3
         - he-node-ng_suite_master
+        - he-node-ng-ssg_suite_master
         - metrics_suite_4.3
         - network_suite_4.2
         - network_suite_4.3
