--- a/stdci.yaml
+++ b/stdci.yaml
@@ -44,6 +44,7 @@ stage:
         - network_suite_4.2
         - network_suite_4.3
         - network_suite_master
+        - performance_suite_master
         - upgrade-from-release_suite_4.2
         - upgrade-from-release_suite_4.3
         - upgrade-from-prevrelease_suite_4.2
