--- a/common/yum-repos/ovirt-4.3-release.repo.in
+++ b/common/yum-repos/ovirt-4.3-release.repo.in
@@ -24,10 +24,12 @@ gpgcheck=1
 gpgkey=https://copr-be.cloud.fedoraproject.org/results/sac/gluster-ansible/pubkey.gpg
 enabled=1
 
-[glusterfs-3.12-el7]
-name = GlusterFS repo
-baseurl = http://mirror.centos.org/centos/7/storage/x86_64/gluster-3.12/
+[glusterfs-5-el7]
+name = GlusterFS 5 repo
+baseurl = http://mirror.centos.org/centos/7/storage/x86_64/gluster-5/
 enabled = 1
+gpgcheck = 1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Storage
 max_connections = 5
 
 [centos-updates-el7]
