A new suite metrics 4.3
Testing the metrics with ELK

Change-Id: I0b97ccafc9ed82ef1416154cd506841165ad07ac
Signed-off-by: Galit Rosenthal <grosenth@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -41,6 +41,7 @@ stage:
         - he-node-ng_suite_4.2
         - he-node-ng_suite_4.3
         - he-node-ng_suite_master
+        - metrics_suite_4.3
         - network_suite_4.2
         - network_suite_4.3
         - network_suite_master
