gluster: Skip memory check for he engine
Change-Id: I63e7cf85ccbffaab9799c0889c93ff5b248ee8d9
Signed-off-by: Sahina Bose <sabose@redhat.com>

--- a/hc-basic-suite-4.2/hc-answers.conf.in
+++ b/hc-basic-suite-4.2/hc-answers.conf.in
@@ -29,3 +29,4 @@ OVEHOSTED_VM/cloudinitVMDNS=str:@GW@
 OVEHOSTED_VM/rootSshPubkey=str:
 OVEHOSTED_VM/rootSshAccess=str:yes
 OVEHOSTED_VDSM/cpu=str:model_Westmere
+OVEHOSTED_CORE/memCheckRequirements=bool:False
