--- a/ansible-suite-master/ovirt-deploy/tasks/bootstrap.yml
+++ b/ansible-suite-master/ovirt-deploy/tasks/bootstrap.yml
@@ -143,7 +143,7 @@
         required: false
 
 - name: Add non VM network
-  ovirt_networks:
+  ovirt_network:
     auth: "{{ ovirt_auth }}"
     data_center: "{{ dc_name }}"
     name: "{{ network2_name }}"
@@ -153,7 +153,7 @@
     mtu: 9000
 
 - name: Remove default datacenter
-  ovirt_datacenters:
+  ovirt_datacenter:
     auth: "{{ ovirt_auth }}"
     state: absent
     name: Default
