hc-basic-suite*: use common repo config file
Also updated common repo file to include
glusterfs server packages

Change-Id: If1653b142f0b68407f3fe0db42340bfaa311ab6e
Signed-off-by: Sandro Bonazzola <sbonazzo@redhat.com>
Signed-off-by: Sahina Bose <sabose@redhat.com>

--- a/common/yum-repos/ovirt-4.3.repo.in
+++ b/common/yum-repos/ovirt-4.3.repo.in
@@ -36,6 +36,15 @@ name = GlusterFS repo
 baseurl = http://mirror.centos.org/centos/7/storage/x86_64/gluster-6/
 enabled = 1
 max_connections = 5
+exclude=*-debuginfo
+       *-devel
+       glusterfs-regression-tests
+       heketi*
+       nfs-ganesha-*
+       libntirpc*
+       glusterfs-ganesha
+       ansible
+       ansible-do
 
 [centos-updates-el7]
 name = CentOS7 Updates
