adding ansible from virt sig common
new version was not yet synced to centos repos

Change-Id: Ia185d840cbed5c69f1ec6ca1904faad1c4345ff5
Signed-off-by: Dafna Ron <dron@redhat.com>

--- a/common/yum-repos/ovirt-4.3-cq.repo.in
+++ b/common/yum-repos/ovirt-4.3-cq.repo.in
@@ -114,3 +114,11 @@ baseurl = http://mirror.centos.org/centos/7/sclo/x86_64/rh
 gpgcheck = 1
 enabled = 1
 gpgkey = https://www.centos.org/keys/RPM-GPG-KEY-CentOS-SIG-SCLo
+
+[sig-virt-common-el7]
+name = sig virt common
+baseurl = http://mirror.centos.org/centos/7/virt/x86_64/ovirt-4.3/
+gpgcheck = 0
+enabled = 1
+includepkgs = ansible
+
