Align local maintenance tests with master
See also:
https://gerrit.ovirt.org/100570/
https://bugzilla.redhat.com/show_bug.cgi?id=1664479
https://bugzilla.redhat.com/show_bug.cgi?id=1665934
https://bugzilla.redhat.com/show_bug.cgi?id=1691244

Change-Id: I4869e18a1aa245c84beddcc60b49a7bbcea63b0f
Signed-off-by: Simone Tiraboschi <stirabos@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -33,6 +33,10 @@ stage:
         - he-basic_suite_master
         - he-basic-iscsi_suite_master
         - he-basic-role-remote_suite_master
+        - he-basic-ipv6_suite_4.3
+        - he-basic_suite_4.3
+        - he-basic-iscsi_suite_4.3
+        - he-basic-role-remote_suite_4.3
         - he-node-ng_suite_4.3
         - he-node-ng_suite_master
         - he-node-ng-ssg_suite_master
