Collect /etc/yum.repos.d files for host and engine
Change-Id: I44938f6c35f79a51d11717254542a3f58641017a
Signed-off-by: Galit Rosenthal <grosenth@redhat.com>

--- a/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
+++ b/common/init-configs/1_centos7_engine_2_centos7_hosts.yml
@@ -69,6 +69,7 @@ domains:
       - /etc/resolv.conf
       - /tmp/ovirt*
       - /tmp/otopi*
+      - /etc/yum.repos.d
 {%- for i in range(hostCount) %}
   lago-{{ env.suite_name }}-host-{{ i }}:
     <<: *vm-common-settings
@@ -98,6 +99,7 @@ domains:
     artifacts:
       - /etc/resolv.conf
       - /var/log
+      - /etc/yum.repos.d
       {% if env.coverage == "true" -%}
       - /var/lib/vdsm/coverage
       {%- endif %}
