Patch Gating: onboard OST to Zuul.
Adding release branches section in stdci.yaml for determining
the suites which will be running before merging.

Change-Id: Id68fe61b154891e46c52d8055d94043455993319
Signed-off-by: Ehud Yonasi <eyonasi@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -85,3 +85,5 @@ stage:
 runtime-requirements:
   support-nesting-level: 2
   isolation_level: container
+release-branches:
+  master: [ovirt-master, ovirt-4.3]
