--- a/common/yum-repos/ovirt-4.2-cq.repo.in
+++ b/common/yum-repos/ovirt-4.2-cq.repo.in
@@ -25,22 +25,22 @@ exclude = ovirt-imageio-common
 
 [glusterfs-3.12-7.6-el7]
 name = GlusterFS repo
-baseurl = http://mirror.centos.org/centos/7.6.1810/storage/x86_64/gluster-3.12/
+baseurl = http://vault.centos.org/7.6.1810/storage/x86_64/gluster-3.12/
 enabled = 1
 
 [centos-updates-7.6-el7]
 name = CentOS7 Updates
-baseurl = http://mirror.centos.org/centos/7.6.1810/updates/x86_64/
+baseurl = http://vault.centos.org/7.6.1810/updates/x86_64/
 enabled = 1
 
 [centos-base-7.6-el7]
 name = CentOS7 Base
-baseurl = http://mirror.centos.org/centos/7.6.1810/os/x86_64/
+baseurl = http://vault.centos.org/7.6.1810/os/x86_64/
 enabled = 1
 
 [centos-extras-7.6-el7]
 name = CentOS7 Extras
-baseurl = http://mirror.centos.org/centos/7.6.1810/extras/x86_64/
+baseurl = http://vault.centos.org/7.6.1810/extras/x86_64/
 enabled = 1
 exclude = libtomcrypt
         libtommath
@@ -67,7 +67,7 @@ exclude = novnc
 
 [centos-ovirt-4.2-7.6-el7]
 name = CentOS-7 - oVirt 4.2
-baseurl = http://mirror.centos.org/centos/7.6.1810/virt/x86_64/ovirt-4.2/
+baseurl = http://vault.centos.org/7.6.1810/virt/x86_64/ovirt-4.2/
 gpgcheck = 0
 enabled = 1
 exclude = ansible
@@ -75,19 +75,19 @@ exclude = ansible
 
 [centos-qemu-ev-release-7.6-el7]
 name = CentOS-7 - QEMU EV
-baseurl = http://mirror.centos.org/centos/7.6.1810/virt/x86_64/kvm-common/
+baseurl = http://vault.centos.org/7.6.1810/virt/x86_64/kvm-common/
 gpgcheck = 1
 enabled = 1
 gpgkey = https://git.centos.org/raw/rpms!centos-release-virt-common/56a0a05d06676fe220e61ab8e31927feeede1128/SOURCES!RPM-GPG-KEY-CentOS-SIG-Virtualization
 
 [centos-opstools-release-7.6-el7]
 name = CentOS-7 - OpsTools - released repo
-baseurl = http://mirror.centos.org/centos/7.6.1810/opstools/x86_64
+baseurl = http://vault.centos.org/7.6.1810/opstools/x86_64
 enabled = 1
 
 [centos-sclo-rh-release-7.6-el7]
 name = CentOS-7 - SCLo rh
-baseurl = http://mirror.centos.org/centos/7.6.1810/sclo/x86_64/rh
+baseurl = http://vault.centos.org/7.6.1810/sclo/x86_64/rh
 gpgcheck = 1
 enabled = 1
 gpgkey = https://www.centos.org/keys/RPM-GPG-KEY-CentOS-SIG-SCLo
