Mv Performance suite no-reposync, host centos8
Move performance suite to use host - centos8
remove the use of reposync as in basic suite master

Change-Id: Ic777c4db5d6183eccd4933390dd9d5e8f710d57d
Signed-off-by: Galit Rosenthal <grosenth@redhat.com>

--- a/performance-suite-master/vars/main.yml
+++ b/performance-suite-master/vars/main.yml
@@ -1,4 +1,5 @@
 templates:
   engine: el7.6-base-5
-  host: el7.6-base-5
+  host: el8-base-1
 hostCount: 2
+create_local_repo: global_add_local_repo_no_ext_access.sh
