--- a/performance-suite-master/LagoInitFile.in
+++ b/performance-suite-master/LagoInitFile.in
@@ -40,9 +40,9 @@ domains:
     metadata:
       ovirt-engine-password: 123
       deploy-scripts:
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_storage_unified_el7.sh
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_engine.sh
+        - $LAGO_INITFILE_PATH/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_storage_unified_el7.sh
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_engine.sh
     artifacts:
           - /root/fluentd
           - /var/opt/rh/rh-postgresql95/lib/pgsql/data/pg_log
@@ -86,10 +86,10 @@ domains:
         format: qcow2
     metadata:
       deploy-scripts:
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/add_local_repo.sh
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_host_el7.sh
+        - $LAGO_INITFILE_PATH/deploy-scripts/{{ create_local_repo|default('add_local_repo.sh') }}
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_host_el7.sh
         {% if not loop.first -%}
-        - $LAGO_INITFILE_PATH/../common/deploy-scripts/setup_1st_host_el7.sh
+        - $LAGO_INITFILE_PATH/deploy-scripts/setup_1st_host_el7.sh
         {%- endif %}
     artifacts:
       - /etc/resolv.conf
